data/derived/comb/progs/unify/prog6466.ml.out
Characters 54-59:
  |(h::t)->h::[];;
           ^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
